[gd_scene load_steps=9 format=3 uid="uid://ckaqtw157nwpp"]

[ext_resource type="Script" path="res://Scene/main.gd" id="1_4liba"]
[ext_resource type="PackedScene" uid="uid://blg77e5jndot5" path="res://Prefab/Decoration/ground.tscn" id="1_nimvs"]
[ext_resource type="PackedScene" uid="uid://bd0iud28ufumo" path="res://Prefab/Player/player.tscn" id="2_y026x"]
[ext_resource type="PackedScene" uid="uid://b6f8khpgsme7w" path="res://Prefab/Decoration/bg.tscn" id="3_cchat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6t4a"]
bg_color = Color(0, 0, 0, 0.266667)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 0.266667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh1w6"]
bg_color = Color(0.367706, 0.212943, 0.836965, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyjcg"]
bg_color = Color(0.334025, 0.224017, 0.936368, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_58sl5"]
bg_color = Color(0.753984, 0.753984, 0.753984, 1)

[node name="Main" type="Node"]
script = ExtResource("1_4liba")

[node name="BG" parent="." instance=ExtResource("3_cchat")]
offset = Vector2(0, -27.285)
scale = Vector2(3.5, 3.5)
transform = Transform2D(3.5, 0, 0, 3.5, 0, -27.285)

[node name="Ground" parent="." instance=ExtResource("1_nimvs")]
position = Vector2(47, -13)

[node name="Player" parent="." instance=ExtResource("2_y026x")]
position = Vector2(158, 379)
scale = Vector2(4, 4)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)
position_smoothing_speed = 2.0
rotation_smoothing_speed = 10.0

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="HUD"]
offset_left = 54.0
offset_top = 7.0
offset_right = 137.0
offset_bottom = 30.0
scale = Vector2(2, 2)
theme_override_styles/normal = SubResource("StyleBoxFlat_s6t4a")
text = "Score : 300"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="HUD"]
offset_left = 857.0
offset_top = 7.0
offset_right = 1000.0
offset_bottom = 50.0
scale = Vector2(2, 2)
theme_override_styles/normal = SubResource("StyleBoxFlat_s6t4a")
text = "High Score : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="HUD"]
offset_left = 908.0
offset_top = 567.0
offset_right = 1068.0
offset_bottom = 590.0
scale = Vector2(1.5, 1.5)
text = "60 minute 60 second"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -11.5
offset_right = 74.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Press Space to play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 2

[node name="Button" type="Button" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -60.0
offset_right = -65.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_sh1w6")
theme_override_styles/hover = SubResource("StyleBoxFlat_eyjcg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_58sl5")
action_mode = 0
text = "RESTART"

[node name="Timer" type="Timer" parent="."]

[node name="Cordinate" type="Sprite2D" parent="."]
position = Vector2(0, 539)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
